dashboard alert page table spacing issue fixed

--- a/src/assets/scss/base/variable/_variables.scss
+++ b/src/assets/scss/base/variable/_variables.scss
@@ -25,12 +25,12 @@ $pink: #aa2f78;
 $yellow: #ffb54c;
 $radio-check: #9d9f8f;
 $theme-colors: (
-    'primary': $primary,
-    'secondary': $secondary,
-    'success': $success,
-    'light': $light,
-    'dark': $dark,
-    'danger': $danger
+	'primary': $primary,
+	'secondary': $secondary,
+	'success': $success,
+	'light': $light,
+	'dark': $dark,
+	'danger': $danger
 );
 // header height
 $header-height: 52px !default;
@@ -96,7 +96,7 @@ $low: #00c535;
 $block-width: 1170px;
 
 $button-box-shadow: 0px 4px 6px rgba(50, 50, 93, 0.11),
-    0px 1px 3px rgba(0, 0, 0, 0.08);
+	0px 1px 3px rgba(0, 0, 0, 0.08);
 
 // modal
 
@@ -174,6 +174,6 @@ $alert-danger-border: #f5c6cb !default;
 // table
 
 $table-footer-bg: #fdfaff;
-$table-row-padding: 14px 8px 14px;
-$table-row-padding-th: 14px 8px 12px;
+$table-row-padding: 14px 12px 14px;
+$table-row-padding-th: 14px 12px 12px;
 $table-hover: lighten($secondary, 43%);
